--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@
 /* Hero section */
 
 .hero {
-    background: linear-gradient(to right, rgba(0,0,0,0.4), rgba(0,0,0,0.1)), url(images/gym-1.jpg);
+    background: linear-gradient(to right, rgba(0,0,0,0.4), rgba(0,0,0,0.1)), url("images/gym-1.jpg");
     height: 100vh;
     background-position: center;
     background-size: cover;
